Fix nav-mobile z-index

--- a/css/main.css
+++ b/css/main.css
@@ -270,6 +270,7 @@ button:nth-child(2) {
   height: 110%;
   right: 0;
   margin-top: -0.625rem;
+  z-index: 10;
   animation-name: menu-mobile-open;
   animation-duration: 0.5s;
   animation-timing-function: ease-out;
