--- a/scss/modules/_nav.scss
+++ b/scss/modules/_nav.scss
@@ -59,6 +59,7 @@
   height: 110%;
   right: 0;
   margin-top: -0.625rem;
+  z-index: 10;
 
   animation-name: menu-mobile-open;
   animation-duration: 0.5s;
